--- a/style.css
+++ b/style.css
@@ -37,3 +37,17 @@ a
     color:blue;
     text-decoration: none;
 }
+
+.par
+{
+    color:blue;
+    font-size: 20pt;
+    font-family: Verdana
+}
+
+.impar
+{
+    color:red;
+    font-size: 16pt;
+    font-family: Arial
+}
